# polars-dovmed

./: .gitignore  License  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml
data/assets/patterns/: info.md
data/assets/patterns/polars/: bioinfo_tools.json  coordinates.json  databases.json  identifiers.json  repositories.JSON
data/assets/patterns/spacy/: coordinates.json  entity_config.json  file_formats.json  taxonomy.json
data/assets/prompts/: full_text_analyser.txt  pattern_groups_query.txt
examples/notebooks/: 01_llm_analyze_papers.ipynb  02_clean_llm_responses.ipynb  03_fetch_sequences_from_databases.ipynb
examples/phenotypic_traits/: phenotypic_schema.json
examples/simple_mode/: simple_test_command.txt  test_simple_mode.sh  test_simple_patterns.txt
src/polars_dovmed/: __init__.py  cli.py  combine_clean_filelists.py  convert_pmctargz_ndjson.py  convert_pmctargz_parquet.py  llm_convert_context_to_coord.py  llm_create_query_patterns.py  llm_utils.py  scan_pmc.py  schema_utils.py  utils.py
src/polars_dovmed/get_data/: download.py  fetch_pmc_oa_ftp.sh
src/polars_dovmed/misc/: test_generic_schema.json  test_protein_schema.json  test_rna_virus_schema.json  test_schema.json
tests/: __init__.py  test_cli.py  test_smoke.py
xml_processor/: Cargo.toml  __init__.pyi  pyproject.toml
xml_processor/src/: __init__.py  lib.rs  nxml.rs
