[package]
name = "xml_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "xml_processor"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py37"] }
pyo3-polars = "*"
polars = { version = "0.49", features = [
    "lazy",
    "strings",
    "dtype-struct",
    "json",
    "parquet",
] }
thiserror = "*"
anyhow = "1.0"
quick-xml = "0.38.0"
regex = "1.10"
log = "0.4"

[dependencies.polars-core]
version = "0.49"
default-features = false

[dependencies.polars-lazy]
version = "0.49"
default-features = false

[build-dependencies]
pyo3-build-config = "0.25.1"

[dev-dependencies]
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
