[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "xml-processor"
version = "0.1.0"
description = "Rust-based parser for the JAT? xml format available from NCBI's FTP"
requires-python = ">=3.8"
dependencies = ["polars>=1.0"]

[tool.maturin]
features = ["pyo3/extension-module"]
